packages/uow-audit/main/default/objects/UoWAuditEvent__e/UoWAuditEvent__e.object-meta.xml
<CustomObject>
    <description>Platform event for UoW audit data. Uses EventType__c discriminator pattern to distinguish between TRANSACTION and OPERATION events. Consumed by UoWAuditEventHandler to create audit records.</description>
    <label>Audit Event</label>
    <pluralLabel>Audit Events</pluralLabel>
</CustomObject>