packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/AgentConfidenceScore__c.field-meta.xml
<CustomField>
    <fullName>AgentConfidenceScore__c</fullName>
    <description>AI confidence score for the transaction (0.0 - 1.0). Transaction events only.</description>
    <label>Agent Confidence Score</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>