packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/AgentId__c.field-meta.xml
<CustomField>
    <fullName>AgentId__c</fullName>
    <description>ID of the AI agent that initiated the transaction. Transaction events only.</description>
    <label>Agent ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>