packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/AgentIntent__c.field-meta.xml
<CustomField>
    <fullName>AgentIntent__c</fullName>
    <description>Intent classification for agent action. Transaction events only.</description>
    <label>Agent Intent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>