packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/AgentInvokedAt__c.field-meta.xml
<CustomField>
    <fullName>AgentInvokedAt__c</fullName>
    <description>When the agent was invoked. Transaction events only.</description>
    <label>Agent Invoked At</label>
    <type>DateTime</type>
</CustomField>