packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/AgentModelId__c.field-meta.xml
<CustomField>
    <fullName>AgentModelId__c</fullName>
    <description>AI model ID used by the agent. Transaction events only.</description>
    <label>Agent Model ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>