packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/AgentName__c.field-meta.xml
<CustomField>
    <fullName>AgentName__c</fullName>
    <description>Display name of the AI agent. Transaction events only.</description>
    <label>Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>