packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/AgentPromptHash__c.field-meta.xml
<CustomField>
    <fullName>AgentPromptHash__c</fullName>
    <description>Hash of the agent prompt for reproducibility audit. Transaction events only.</description>
    <label>Agent Prompt Hash</label>
    <length>64</length>
    <type>Text</type>
</CustomField>