packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/ArchivalMode__c.field-meta.xml
<CustomField>
    <fullName>ArchivalMode__c</fullName>
    <description>Archival mode for this audit record. Determines whether records are purged or archived to Big Object. Transaction events only.</description>
    <label>Archival Mode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>