packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/ArchiveDate__c.field-meta.xml
<CustomField>
    <fullName>ArchiveDate__c</fullName>
    <description>Date when this audit record becomes eligible for archival. Calculated as event timestamp + retention days. Transaction events only.</description>
    <label>Archive Date</label>
    <type>Date</type>
</CustomField>