packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/AsyncDepth__c.field-meta.xml
<CustomField>
    <fullName>AsyncDepth__c</fullName>
    <description>Depth in async execution chain (0 = root, 1 = first child, etc.). Transaction events only.</description>
    <label>Async Depth</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>