packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/CalloutRequestBody__c.field-meta.xml
<CustomField>
    <fullName>CalloutRequestBody__c</fullName>
    <description>Request body sent in callout (may be masked). Work item events only (CALLOUT type).</description>
    <label>Callout Request Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>