packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/CalloutResponseBody__c.field-meta.xml
<CustomField>
    <fullName>CalloutResponseBody__c</fullName>
    <description>Response body received from callout. Work item events only (CALLOUT type).</description>
    <label>Callout Response Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>