packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/CalloutRetryConfig__c.field-meta.xml
<CustomField>
    <fullName>CalloutRetryConfig__c</fullName>
    <description>JSON object with retry configuration for callout work items. Work item events only (CALLOUT type).</description>
    <label>Callout Retry Config</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>