packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/CommitMode__c.field-meta.xml
<CustomField>
    <fullName>CommitMode__c</fullName>
    <description>Transaction commit mode (SYNC, ASYNC). Transaction events only.</description>
    <label>Commit Mode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>