packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/ConfigurationName__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationName__c</fullName>
    <description>Name of the UoW configuration used for this transaction. Transaction events only.</description>
    <label>Configuration Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>