packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/ConfigurationSnapshot__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationSnapshot__c</fullName>
    <description>JSON snapshot of UoW configuration at transaction execution time. Transaction events only.</description>
    <label>Configuration Snapshot</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>