packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/ContinueOnError__c.field-meta.xml
<CustomField>
    <fullName>ContinueOnError__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the work item continues on error (partial success allowed). Work item events only.</description>
    <label>Continue On Error</label>
    <type>Checkbox</type>
</CustomField>