packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/CorrelationId__c.field-meta.xml
<CustomField>
    <fullName>CorrelationId__c</fullName>
    <description>UUID correlation ID for distributed tracing. Links all events from the same transaction across async boundaries.</description>
    <label>Correlation ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>