packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/CustomMetadata__c.field-meta.xml
<CustomField>
    <fullName>CustomMetadata__c</fullName>
    <description>JSON object with user-defined custom metadata for the transaction. Transaction events only.</description>
    <label>Custom Metadata</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>