packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>User-provided description of what this transaction does</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>