packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/DmlOperation__c.field-meta.xml
<CustomField>
    <fullName>DmlOperation__c</fullName>
    <description>DML operation type (INSERT_OP, UPDATE_OP, UPSERT_OP, DELETE_OP, UNDELETE_OP). DML work item events only.</description>
    <label>DML Operation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>