packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/EmailRecipients__c.field-meta.xml
<CustomField>
    <fullName>EmailRecipients__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <description>JSON array of email recipients (to, cc, bcc). Work item events only (EMAIL type).</description>
    <label>Email Recipients</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>