packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/EnableScenarioRecordTracking__c.field-meta.xml
<CustomField>
    <fullName>EnableScenarioRecordTracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to create/update UoWScenario__c records and link them to audit transactions via lookup</description>
    <label>Enable Scenario Record Tracking</label>
    <type>Checkbox</type>
</CustomField>