packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Endpoint URL for callout work items. Callout work item events only.</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>