packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/EndTime__c.field-meta.xml
<CustomField>
    <fullName>EndTime__c</fullName>
    <description>Transaction end time when limits were last captured. Transaction events only.</description>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>