packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/ErrorCount__c.field-meta.xml
<CustomField>
    <fullName>ErrorCount__c</fullName>
    <description>Number of errors in the transaction or work item.</description>
    <label>Error Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>