packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/ErrorDetails__c.field-meta.xml
<CustomField>
    <fullName>ErrorDetails__c</fullName>
    <description>JSON array of detailed error information including errorId, type, message, context, and isRetryable. Both transaction and work item events.</description>
    <label>Error Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>