packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>Primary error message if the work item failed.</description>
    <label>Error Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>