packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/ErrorStackTrace__c.field-meta.xml
<CustomField>
    <fullName>ErrorStackTrace__c</fullName>
    <description>Full stack trace for exception-based errors. Both transaction and work item events.</description>
    <label>Error Stack Trace</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>