packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <description>Discriminator field to identify event type. TRANSACTION = parent transaction event, OPERATION = child operation event.</description>
    <label>Event Type</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>