packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/ExecutionContext__c.field-meta.xml
<CustomField>
    <fullName>ExecutionContext__c</fullName>
    <description>Execution context of the transaction (SYNC, QUEUEABLE, BATCH, FUTURE, etc.). Transaction events only.</description>
    <label>Execution Context</label>
    <length>30</length>
    <type>Text</type>
</CustomField>