packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/ExecutionPhase__c.field-meta.xml
<CustomField>
    <fullName>ExecutionPhase__c</fullName>
    <description>Execution phase (PRE_DML, POST_DML, ON_SUCCESS, ON_FAILURE, ON_FINALIZATION). Work item events only.</description>
    <label>Execution Phase</label>
    <length>30</length>
    <type>Text</type>
</CustomField>