packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/ExecutionTimeMs__c.field-meta.xml
<CustomField>
    <fullName>ExecutionTimeMs__c</fullName>
    <description>Duration of work item execution in milliseconds. Work item events only.</description>
    <label>Execution Time (ms)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>