packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/FailureCount__c.field-meta.xml
<CustomField>
    <fullName>FailureCount__c</fullName>
    <description>Number of failures in the work item. Work item events only.</description>
    <label>Failure Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>