packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/FlowApiName__c.field-meta.xml
<CustomField>
    <fullName>FlowApiName__c</fullName>
    <description>Flow API name for flow work items. Flow work item events only.</description>
    <label>Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>