packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/FlowInputs__c.field-meta.xml
<CustomField>
    <fullName>FlowInputs__c</fullName>
    <description>JSON object with flow input variables. Work item events only (FLOW type).</description>
    <label>Flow Inputs</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>