packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/FlowOutputs__c.field-meta.xml
<CustomField>
    <fullName>FlowOutputs__c</fullName>
    <description>JSON object with flow output variables. Work item events only (FLOW type).</description>
    <label>Flow Outputs</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>