packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/HasErrors__c.field-meta.xml
<CustomField>
    <fullName>HasErrors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the transaction or work item has errors.</description>
    <label>Has Errors</label>
    <type>Checkbox</type>
</CustomField>