packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/HttpMethod__c.field-meta.xml
<CustomField>
    <fullName>HttpMethod__c</fullName>
    <description>HTTP method for callout work items (GET, POST, PUT, DELETE, PATCH). Callout work item events only.</description>
    <label>HTTP Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>