packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/IsAgentTransaction__c.field-meta.xml
<CustomField>
    <fullName>IsAgentTransaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this transaction was initiated by an AI agent. Transaction events only.</description>
    <label>Is Agent Transaction</label>
    <type>Checkbox</type>
</CustomField>