packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/IsDryRun__c.field-meta.xml
<CustomField>
    <fullName>IsDryRun__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this transaction was executed in dry run mode (no actual DML). Transaction events only.</description>
    <label>Is Dry Run</label>
    <type>Checkbox</type>
</CustomField>