packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/IsExecuted__c.field-meta.xml
<CustomField>
    <fullName>IsExecuted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the work item was executed. Work item events only.</description>
    <label>Is Executed</label>
    <type>Checkbox</type>
</CustomField>