packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/LimitsAtEnd__c.field-meta.xml
<CustomField>
    <fullName>LimitsAtEnd__c</fullName>
    <description>JSON object with all governor limits at transaction end. Transaction events only.</description>
    <label>Limits At End</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>