packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/LimitsAtStart__c.field-meta.xml
<CustomField>
    <fullName>LimitsAtStart__c</fullName>
    <description>JSON object with all governor limits at transaction start. Transaction events only.</description>
    <label>Limits At Start</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>