packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/LimitsConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsConsumed__c</fullName>
    <description>JSON object with governor limits consumed by this work item. Work item events only.</description>
    <label>Limits Consumed</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>