packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/LimitsMax__c.field-meta.xml
<CustomField>
    <fullName>LimitsMax__c</fullName>
    <description>JSON object with maximum governor limits for the transaction context. Transaction events only. Constant within a transaction.</description>
    <label>Limits Max</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>