packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/LimitsTotalConsumed__c.field-meta.xml
<CustomField>
    <fullName>LimitsTotalConsumed__c</fullName>
    <description>JSON object with total governor limits consumed (end - start). Transaction events only.</description>
    <label>Limits Total Consumed</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>