packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/LoginType__c.field-meta.xml
<CustomField>
    <fullName>LoginType__c</fullName>
    <description>How the user authenticated (e.g., Username-Password, SAML, OAuth). Transaction events only.</description>
    <label>Login Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>