packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/MaskedFields__c.field-meta.xml
<CustomField>
    <fullName>MaskedFields__c</fullName>
    <description>Comma-separated list of field API names that were masked in this work item (e.g., &quot;Email__c, SSN__c&quot;).</description>
    <label>Masked Fields</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>