packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/MaskingApplied__c.field-meta.xml
<CustomField>
    <fullName>MaskingApplied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if data masking was applied to records in this work item.</description>
    <label>Masking Applied</label>
    <type>Checkbox</type>
</CustomField>