packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/Messages__c.field-meta.xml
<CustomField>
    <fullName>Messages__c</fullName>
    <description>JSON array of transaction messages (INFO, WARN, DEBUG, etc.) with timestamp, source, and message. Transaction events only.</description>
    <label>Messages</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>