packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/NotificationRecipients__c.field-meta.xml
<CustomField>
    <fullName>NotificationRecipients__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <description>JSON array of notification recipient user IDs. Work item events only (NOTIFICATION type).</description>
    <label>Notification Recipients</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>