packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/NotificationType__c.field-meta.xml
<CustomField>
    <fullName>NotificationType__c</fullName>
    <description>Custom notification type developer name. Work item events only (NOTIFICATION type).</description>
    <label>Notification Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>