packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/OrganizationId__c.field-meta.xml
<CustomField>
    <fullName>OrganizationId__c</fullName>
    <description>Salesforce Organization ID where the transaction executed. Transaction events only.</description>
    <label>Organization ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>