packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/OrganizationInstanceName__c.field-meta.xml
<CustomField>
    <fullName>OrganizationInstanceName__c</fullName>
    <description>Salesforce instance name (e.g., NA123, EU45). Transaction events only.</description>
    <label>Organization Instance Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>