packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/OrganizationIsSandbox__c.field-meta.xml
<CustomField>
    <fullName>OrganizationIsSandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the organization is a sandbox (true) or production (false). Transaction events only.</description>
    <label>Organization Is Sandbox</label>
    <type>Checkbox</type>
</CustomField>