packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/OrganizationName__c.field-meta.xml
<CustomField>
    <fullName>OrganizationName__c</fullName>
    <description>Name of the Salesforce organization. Transaction events only.</description>
    <label>Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>