packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/OriginApiVersion__c.field-meta.xml
<CustomField>
    <fullName>OriginApiVersion__c</fullName>
    <description>API version of the origin Apex class (e.g., 65.0).</description>
    <label>Origin API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>