packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/OriginClassName__c.field-meta.xml
<CustomField>
    <fullName>OriginClassName__c</fullName>
    <description>The actual ApexClass or ApexTrigger name that contains the origin code. For inner classes, this is the outer class name.</description>
    <label>Origin Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>