packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/OriginLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>OriginLastModifiedDate__c</fullName>
    <description>The last modified date of the ApexClass/ApexTrigger at capture time.</description>
    <label>Origin Last Modified Date</label>
    <type>DateTime</type>
</CustomField>