packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/OriginLineNumber__c.field-meta.xml
<CustomField>
    <fullName>OriginLineNumber__c</fullName>
    <description>The line number in the source code where the work item was registered.</description>
    <label>Origin Line Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>