packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/OriginMetadataType__c.field-meta.xml
<CustomField>
    <fullName>OriginMetadataType__c</fullName>
    <description>The type of metadata: ApexClass or ApexTrigger.</description>
    <label>Origin Metadata Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>