packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/OriginMethodName__c.field-meta.xml
<CustomField>
    <fullName>OriginMethodName__c</fullName>
    <description>The method name where the work item was registered.</description>
    <label>Origin Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>