packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/OriginSnippetStartLine__c.field-meta.xml
<CustomField>
    <fullName>OriginSnippetStartLine__c</fullName>
    <description>The starting line number of the source code snippet.</description>
    <label>Origin Snippet Start Line</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>