packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/OriginSourceMetadata__c.field-meta.xml
<CustomField>
    <fullName>OriginSourceMetadata__c</fullName>
    <description>JSON object containing origin source metadata including ApexClass info (API version, created/modified dates) and source code snippet around the origin line. Work item events only.</description>
    <label>Origin Source Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>