packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/ParentTransactionId__c.field-meta.xml
<CustomField>
    <fullName>ParentTransactionId__c</fullName>
    <description>Parent transaction ID for async chain tracking. Transaction events only.</description>
    <label>Parent Transaction ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>