packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/PlannedCount__c.field-meta.xml
<CustomField>
    <fullName>PlannedCount__c</fullName>
    <description>Number of items planned for the work item at registration time. Work item events only.</description>
    <label>Planned Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>