packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/PolicyCount__c.field-meta.xml
<CustomField>
    <fullName>PolicyCount__c</fullName>
    <description>Number of policies evaluated for this transaction. Transaction events only.</description>
    <label>Policy Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>