packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/PolicyEvaluated__c.field-meta.xml
<CustomField>
    <fullName>PolicyEvaluated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether policy evaluation was performed for this transaction. Used for UI filtering and conditional display.</description>
    <label>Policy Evaluated</label>
    <type>Checkbox</type>
</CustomField>