packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/PolicyEvaluations__c.field-meta.xml
<CustomField>
    <fullName>PolicyEvaluations__c</fullName>
    <description>JSON array of policy evaluation results. Transaction events only.</description>
    <label>Policy Evaluations</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>