packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/ProcessedCount__c.field-meta.xml
<CustomField>
    <fullName>ProcessedCount__c</fullName>
    <description>Number of items processed in the work item. Work item events only.</description>
    <label>Processed Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>