packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/RecordIds__c.field-meta.xml
<CustomField>
    <fullName>RecordIds__c</fullName>
    <description>Comma-separated real record Ids (rids) of the sampled records touched by a DML work item. Used to build UoWAuditRecordIndex__c reverse-lookup rows. Work item events only; blank when the object's sampling strategy is NONE.</description>
    <label>Record Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>