packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/RequestedAt__c.field-meta.xml
<CustomField>
    <fullName>RequestedAt__c</fullName>
    <description>When the work item was registered. Work item events only.</description>
    <label>Requested At</label>
    <type>DateTime</type>
</CustomField>