packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/RequestId__c.field-meta.xml
<CustomField>
    <fullName>RequestId__c</fullName>
    <description>Salesforce platform request ID for correlation with debug logs. Transaction events only.</description>
    <label>Request ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>