packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/RequestOrigin__c.field-meta.xml
<CustomField>
    <fullName>RequestOrigin__c</fullName>
    <description>Origin location of the work item request (class:method:line). Work item events only.</description>
    <label>Request Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>