packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/RequestStackTrace__c.field-meta.xml
<CustomField>
    <fullName>RequestStackTrace__c</fullName>
    <description>Request stack trace for debugging. Work item events only.</description>
    <label>Request Stack Trace</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>