packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/RequiresApproval__c.field-meta.xml
<CustomField>
    <fullName>RequiresApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the transaction requires approval based on risk or policy evaluation. Transaction events only.</description>
    <label>Requires Approval</label>
    <type>Checkbox</type>
</CustomField>