packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/ResponseStatusCode__c.field-meta.xml
<CustomField>
    <fullName>ResponseStatusCode__c</fullName>
    <description>HTTP response status code for callout work items. Callout work item events only.</description>
    <label>Response Status Code</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>