packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/RetentionDays__c.field-meta.xml
<CustomField>
    <fullName>RetentionDays__c</fullName>
    <description>Number of days to retain audit records. Transaction events only.</description>
    <label>Retention Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>