packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/RetryCount__c.field-meta.xml
<CustomField>
    <fullName>RetryCount__c</fullName>
    <description>Number of retry attempts for this work item. Work item events only.</description>
    <label>Retry Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>