packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/RiskEvaluated__c.field-meta.xml
<CustomField>
    <fullName>RiskEvaluated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether risk assessment was performed for this transaction. Used for UI filtering and conditional display.</description>
    <label>Risk Evaluated</label>
    <type>Checkbox</type>
</CustomField>