packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/RiskFactors__c.field-meta.xml
<CustomField>
    <fullName>RiskFactors__c</fullName>
    <description>JSON array of risk factors from risk assessment. Transaction events only.</description>
    <label>Risk Factors</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>