packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/RiskLevel__c.field-meta.xml
<CustomField>
    <fullName>RiskLevel__c</fullName>
    <description>Risk level for TRANSACTION events (for filtering/routing).</description>
    <label>Risk Level</label>
    <length>20</length>
    <type>Text</type>
</CustomField>