packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/RiskScore__c.field-meta.xml
<CustomField>
    <fullName>RiskScore__c</fullName>
    <description>Calculated risk score from risk assessment (0-100). Transaction events only.</description>
    <label>Risk Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>