packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Execution sequence number of the work item within the transaction. Work item events only.</description>
    <label>Sequence</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>