packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/SessionType__c.field-meta.xml
<CustomField>
    <fullName>SessionType__c</fullName>
    <description>Type of session (e.g., UI, API, ChatterNetworks). Transaction events only.</description>
    <label>Session Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>