packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Snapshot__c</fullName>
    <description>JSON object with before/after record data snapshot. Work item events only.</description>
    <label>Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>