packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/SObjectType__c.field-meta.xml
<CustomField>
    <fullName>SObjectType__c</fullName>
    <description>SObject type for DML operations (for filtering/routing).</description>
    <label>SObject Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>