packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/SourceIp__c.field-meta.xml
<CustomField>
    <fullName>SourceIp__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>IP address of the client that initiated the session. Transaction events only.</description>
    <label>Source IP</label>
    <length>50</length>
    <type>Text</type>
</CustomField>