packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <description>Transaction start time when limits were first captured. Transaction events only.</description>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>