packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/Statistics__c.field-meta.xml
<CustomField>
    <fullName>Statistics__c</fullName>
    <description>JSON object with statistics breakdown. Transaction events only.</description>
    <label>Statistics</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>