packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/StorageMode__c.field-meta.xml
<CustomField>
    <fullName>StorageMode__c</fullName>
    <description>Target storage mode for this audit event. Determines how the event handler persists the data (CUSTOM_OBJECT, BIG_OBJECT, etc.).</description>
    <label>Storage Mode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>