packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/StrictestAction__c.field-meta.xml
<CustomField>
    <fullName>StrictestAction__c</fullName>
    <description>Strictest policy action from evaluation (ALLOW, REQUIRE_APPROVAL, DENY). Transaction events only.</description>
    <label>Strictest Action</label>
    <length>30</length>
    <type>Text</type>
</CustomField>