packages/uow-audit/main/default/objects/UoWAuditEvent__e/fields/SuccessCount__c.field-meta.xml
<CustomField>
    <fullName>SuccessCount__c</fullName>
    <description>Number of successes for the work item. Work item events only.</description>
    <label>Success Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>